update jvm note 🌸